feat: swagger more
